# python-package-template

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: dev.yml  python-checks.yml  python-tests-with-db.yml  python-tests.yml
src/python_template/: python_pet.py
tests/python_template/: test_python_pet.py
